2006-09-09  Douglas Bates  <bates@R-project.org>

	* src/dsCMatrix.c (dsCMatrix_Cholesky): igoring LDL = FALSE now
	fixed

2006-09-09  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/sparseMatrix.R (Tsp2grNEL): do not yet use graph::foo()

	* R/dgeMatrix.R: do not define tcrossprod() methods for "matrix"
	* man/tcrossprod.Rd: dito

2006-09-08  Douglas Bates  <bates@stat.wisc.edu>

	* inst/include/Matrix_stubs.c,Matrix.h: Add declarations and stubs
	for exported functions
	* src/Makefile, src/CHOLMOD/Lib/Makefile, src/Metis,CAMD,CCOLAMD:
	Remove partitioning algorithms for sparse matrix reordering.  The
	copyright on the Metis code was problematic and the methods were
	rarely used.
	* src/triplet_to_col.[ch],MMHB.[ch]: Remove triplet_to_col.  Such
	operations are now done entirely in CHOLMOD code.

2006-09-06  Douglas Bates  <bates@R-project.org>

	* src/Mutils.h: Remove functions that are no longer used.

2006-09-04  Douglas Bates  <bates@R-project.org>

	* src/dtCMatrix.c (dtCMatrix_validate): rename functions.
	* src/DEPS.mkf: update

2006-09-02  Martin Maechler  <maechler@stat.math.ethz.ch>

	* created branches/Matrix-for-R-2.3.x;  on trunk: do
	* DESCRIPTION (Version): 0.9975-0
	(Depends): R (>= 2.4.0)

2006-09-01  Douglas Bates  <bates@R-project.org>

	* R/sparseMatrix.R: Added direct method to CsparseMatrix from graphNEL

2006-09-01  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/sparseMatrix.R: add coercion from "ANY" to "sparseMatrix"
	* R/denseMatrix.R:  add coercion from "ANY" to "denseMatrix"

	* R/Matrix.R ([): use nargs() to disambiguate M[i] and M[i,]

2006-08-31  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/sparseMatrix.R (Arith): moved Arith group method one-level up
	from "dsparse" to "sparse" and now go via "Csparse" instead of "dgC"
	* R/dsparseMatrix.R: dito
	* R/Csparse.R: dito

2006-08-31  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/dMatrix.R (Compare): improve availability of "<", etc